<resources>
    <string name="app_name">정비차량관리</string>
    <string name="title_home">일일 정비 차량</string>
    <string name="title_search">차량 검색</string>
    <string name="title_addCar">정비 차량 추가</string>
    <string name="title_confirmCar">정비 차량 확인</string>
    <string name="title_modifyCar">정비 차량 수정</string>

    <!-- splash activity -->
    <string name="splash_getServerKey">서버 정보를 가져오는 중입니다.</string>
    <string name="splash_getPassword">비밀번호 확인 중입니다.</string>

    <!-- main activity -->
    <string name="main_bottomBar_home">홈</string>
    <string name="main_bottomBar_search">검색</string>

    <!-- home fragment -->
    <string name="home_noData_info">해당 날짜에 등록된 차량이 없어요!</string>

    <!-- item_rv_home -->
    <string name="item_rv_home_compayName">회사명 :</string>
    <string name="item_rv_home_customerPhoneNumber">고객 전화번호 :</string>
    <string name="item_rv_home_carType">차종 :</string>
    <string name="item_rv_home_drivenDistance">주행거리 :</string>

    <!-- 고객 차량 추가 string -->
    <string name="add_date">날짜 : </string>
    <string name="add_changeDate">날짜 변경</string>
    <string name="add_time">시간 : </string>
    <string name="add_changeTime">시간 변경</string>
    <string name="add_company">회사명</string>
    <string name="add_company_hint">회사명을 입력하세요</string>
    <string name="add_customerPhoneNumber">고객 전화번호</string>
    <string name="add_customerPhoneNumber_hint">고객 전화번호를 입력하세요( -, 띄어쓰기 사용 x )</string>
    <string name="add_carNumber">차량 번호</string>
    <string name="add_carNumber_hint">차량 번호를 입력하세요( 띄어쓰기 사용x )</string>
    <string name="add_carType">차종</string>
    <string name="add_carType_hint">차종을 입력하세요</string>
    <string name="add_distanceDriven">주행거리</string>
    <string name="add_distanceDriven_hint">주행거리를 입력하세요</string>
    <string name="add_workList">작업 사항</string>
    <string name="add_workList_hint">작업 사항을 입력하세요</string>
    <string name="add_etc">기타</string>
    <string name="add_etc_hint">기타 특이사항이 있으면 입력하세요</string>
    <string name="add_ok">확인</string>


    <!-- confirmCar dialog -->
    <string name="confirmCar_modify">수정</string>
    <string name="confirmCar_delete">삭제</string>
    <string name="confirmCar_company">회사명</string>
    <string name="confirmCar_customerPhoneNumber">전화번호</string>
    <string name="confirmCar_carType">차종</string>
    <string name="confirmCar_drivenDistance">주행 거리</string>
    <string name="confirmCar_workList">작업 사항</string>
    <string name="confirmCar_etc">기타</string>

    <!-- activity_search -->
    <string name="search_toolbar_title">차량 검색</string>
    <string name="search_button">검색</string>
    <string name="search_carNumber">차량 번호</string>
    <string name="search_phoneNumber">전화 번호</string>
    <string name="search_pagerName_carNumber">차량 번호로 검색</string>
    <string name="search_pagerName_phoneNumber">전화 번호로 검색</string>
    <string name="search_nothaveContent">내용을 입력해주세요</string>

    <!-- item_rv_search -->
    <string name="item_rv_search_compayName">회사명 :</string>
    <string name="item_rv_search_customerPhoneNumber">고객 전화번호 :</string>
    <string name="item_rv_search_carType">차종 :</string>
    <string name="item_rv_search_drivenDistance">주행거리 :</string>

    <string name="firebaseDB_addCar_success">차량 추가 성공</string>
    <string name="firebaseDB_addCar_fail">차량 추가 실패</string>
    <string name="firebaseDB_modifyCar_success">차량 수정 성공</string>
    <string name="firebaseDB_modifyCar_fail">차량 수정 실패</string>
    <string name="firebaseDB_deleteCar_success">차량 삭제 성공</string>
    <string name="firebaseDB_deleteCar_fail">차량 삭제 실패</string>

    <string name="FCM_addCar">차량을 추가하셨습니다.</string>
    <string name="FCM_modifyCar">차량을 수정하셨습니다.</string>
    <string name="FCM_deleteCar">차량을 삭제하셨습니다.</string>

    <string name="dialog_modifyCar_title">정비 내역 수정</string>
    <string name="dialog_modifyCar_confirm">수정 페이지로 이동하시겠습니까?</string>
    <string name="dialog_deleteCar_title">정비 내역 삭제</string>
    <string name="dialog_deleteCar_confirm">해당 정비 내역을 삭제하시겠습니까?</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="password_title">비밀번호 확인</string>
    <string name="password_info">앱 설치 후 최초 한번만 확인하며 5회 이상 비밀번호 오류 시 앱 사용이 불가능하오니 정확히 입력해주시길 바랍니다.</string>
    <string name="password_wrong_over">비밀번호 오류 횟수를 초과했습니다. 앱 사용이 불가해집니다.</string>
    <string name="password_hint">비밀번호를 입력해주세요</string>
    <string name="password_ok">확인</string>

    <string name="workerName_title">성명</string>
    <string name="workerName_info">성명은 필수 항목이니 정확히 입력해주세요.</string>
    <string name="workerName_hint">성명을 입력해주세요</string>
    <string name="workerName_ok">확인</string>
    <string name="workerName_wrongText">성명을 입력하셔야 합니다.</string>
    <string name="workerName_changeComplete">이름 변경 완료</string>

    <string name="setting_changeWorkerName">이름 변경</string>
    <string name="setting_changeAppPassword">앱 비밀번호 변경</string>
    <string name="setting_changeAppPassword_success">앱 비밀번호 변경 완료</string>
    <string name="setting_changeAppPassword_fail">앱 비밀번호 변경 실패</string>

</resources>
