<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addCar_toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textAlignment="center"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <ImageButton
            android:id="@+id/ib_addCar_toolbar_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_addCar"
            android:layout_gravity="center"
            android:id="@+id/tv_addCar_toolbar_title"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            />

    </androidx.appcompat.widget.Toolbar>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addCar_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_add_date_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/add_date"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_add_date_info"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="TextView"
                    android:textColor="@color/colorBlack"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_add_changeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_add_date"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:text="@string/add_changeDate"
                    android:textStyle="bold"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_add_time_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/add_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_add_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_add_time_info"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="TextView"
                    android:textColor="@color/colorBlack"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_add_changeTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_add_time"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:text="@string/add_changeTime"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_company"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_company_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_customerPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_customerPhoneNumber"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_customerPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_customerPhoneNumber_hint"
                    android:inputType="phone"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_carNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_carNumber"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_carNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_carNumber_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_carType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_carType"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_carType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_carType_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_distanceDriven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_distanceDriven"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_distanceDriven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_distanceDriven_hint"
                    android:inputType="number"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_workList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_workList"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_workList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_workList_hint"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_etc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_etc"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_add_etc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_round_rectangle_stroke"
                    android:ems="10"
                    android:hint="@string/add_etc_hint"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_add_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorCustome_blue"
                    android:text="@string/add_ok"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>