<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_workerName_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_workerName_info"
        android:layout_margin="20dp"
        android:text="@string/workerName_title"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/colorCustome_blue"/>

    <TextView
        android:id="@+id/tv_workerName_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_workerName"
        android:layout_margin="20dp"
        android:text="@string/workerName_info"
        android:textColor="@color/colorBlack"
        android:lineSpacingExtra="10dp"/>

    <RelativeLayout
        android:id="@+id/rl_workerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/et_workerName_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/bt_workerName_ok"
            android:ems="10"
            android:hint="@string/workerName_hint"
            android:inputType="textPersonName"
            app:theme="@style/EditTextStyle"/>

        <Button
            android:id="@+id/bt_workerName_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/colorCustome_blue"
            android:clickable="false"
            android:text="@string/workerName_ok"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

</RelativeLayout>