<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/black_round_rectangle_stroke"
    android:layout_margin="15dp"
    android:elevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_item_rv_home_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="19:00"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/tv_item_rv_home_carNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="19부9225"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="40dp"/>

        <RelativeLayout
            android:id="@+id/ll_item_rv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_rv_home_carNumber"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_rv_home_companyName_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/item_rv_home_compayName"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_item_rv_home_companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_item_rv_home_companyName_info"
                android:text="오리온"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_item_rv_customerPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_item_rv_home"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_rv_home_customerPhoneNumber_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/item_rv_home_customerPhoneNumber"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tv_item_rv_home_customerPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_item_rv_home_customerPhoneNumber_info"
                android:text="010-6662-2199"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_item_rv_carType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_item_rv_customerPhoneNumber"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_rv_home_carType_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/item_rv_home_carType"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tv_item_rv_home_carType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_item_rv_home_carType_info"
                android:text="SM3"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_item_rv_driveDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_item_rv_carType"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_rv_home_driveDistance_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/item_rv_home_drivenDistance"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tv_item_rv_home_driveDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_item_rv_home_driveDistance_info"
                android:text="123445"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>